feat: download endpoint
